<resources>
    <string name="app_name">Kotelok</string>
    <string name="dictionaries_ru">Словари</string>
    <string name="recognize_ru">Распознать</string>
    <string name="profile_ru">Профиль</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_speech_btn_description">Прослушать произношение слова</string>
    <string name="translation_pos_line">%1s, %2s</string>
    <string name="search_item_title">search</string>
    <string name="add_word_fab_description">Довить значение слова</string>
    <string name="default_word">Слово</string>
    <string name="enter_word">введите слово</string>
    <string name="next_word">следущее слово</string>
    <string name="check_button_text">проверить</string>
    <string name="dict_completed">На сегодня Вы завершили тренировку по данному словарю. \nВы можете продолжить тренироваться или вернуться к словарям</string>
    <string name="enter_writing_hint">Введите слово</string>
    <string name="lookup_word_button_text">Найти определения</string>
    <string name="add_custom_definition_button">Добавить собственное определение</string>
    <string name="add_custom_definition_text">Добавить</string>
    <string name="save_definitions">Сохранить определения</string>
    <string name="lookup_def_input_error">Ошибка: Вы должны ввести слово</string>
    <string name="yandex_dict_api_hyper"><a href="http://api.yandex.ru/dictionary/">Реализовано с помощью сервиса \n«API Яндекс.Словарь»</a></string>
    <string name="add_def_screen_title">Добавить определение</string>
    <string name="landscape_input_warning">Чтобы ввести слово, поверните телефон вертикально</string>
    <string name="field_hint_writing">Написание</string>
    <string name="field_hint_translation">Перевод</string>
    <string name="field_hint_pos">Часть речи</string>
    <string name="field_hint_transcription">Транскрипция</string>
    <string name="text_header_other_translations">Другие варианты перевода:</string>
    <string name="text_header_synonyms">Синонимы:</string>
    <string name="text_header_other_examples">Примеры:</string>
    <string name="btn_add_other_translation">Добавить вариант</string>
    <string name="btn_add_synonym">Добавить синоним</string>
    <string name="btn_add_example">Добавить пример</string>
    <string name="field_hint_synonym">Синоним</string>
    <string name="field_hint_example">Пример</string>
    <string name="field_hint_example_translation">Перевод примера</string>
    <string name="delete_translation_btn">Удалить вариант перевода</string>
    <string name="button_delete_synonym">Удалить синоним</string>
    <string name="btn_delete_example">Удалить пример</string>
    <string name="fab_edit_definition">Редактировать определение</string>
    <string name="fab_save_definition">Сохранить информацию об определении</string>
    <string name="header_text_main_fields">Основное:</string>
    <string name="header_text_additional_fields">Дополнительно:</string>
    <string name="error_field_required">Это обязательное поле</string>
    <string name="statistics_header">Статистика:</string>
    <string name="learn_button_text">Изучать</string>
    <string name="add_dictionary_fab_desc">Добавить словарь</string>
    <string name="size_2_4">%1$d слова</string>
    <string name="size_1">%1$d слово</string>
    <string name="size_5_10">%1$d слов</string>
    <string name="title_dictionaries">Словари</string>
    <string name="cards_trainer_icon">Иконка тренажерас с карточками</string>
    <string name="text_cards_trainer">Карточки</string>
    <string name="text_choose_trainer">Выберите тренажер</string>
    <string name="icon_choose_trainer_desc">Иконка выбора тренажера</string>
    <string name="text_writing_trainer">Написание</string>
    <string name="icon_writing_trainer_desc">Иконка тренажера на проверку написания</string>
    <string name="hint_dictionary_label">Название словаря</string>
    <string name="title_add_new_dictionary">Новый словарь</string>
    <string name="error_dict_label_field">Вы должны ввести название словаря</string>
    <string name="correct_guess">Верно!</string>
    <string name="incorrect_guess">Неверно!\nВерный ответ: %1$s</string>

    <string name="statistics">
        Изучаемые слова: %1$s\nЗавершенные тренировки: %2$s\nУспешно пройденные тренировки: %3$s</string>
    <string name="averageSkill"> Скилл: %1$s</string>
    <string name="repeat_train">Тренироваться</string>
    <string name="cards_trainer_title">Карточки</string>
    <string name="writer_trainer_title">Написание слов</string>
    <string name="recognize_button_text">Распознать</string>
    <string name="text_edit_recognized_text_field_description">Вы можете отредактировать распозанный текст:</string>
    <string name="button_continue_recognize_text">Продолжить</string>
    <string name="hint_recognized_text">Распознанный текст</string>
    <string name="button_apply_changes_text">Применить изменения</string>
    <string name="text_choose_recognized_word">Нажмите на слово, чтобы больше узнать о нем:</string>
    <string name="title_recognized_words">Распознанные слова</string>
    <string name="title_recognize_text">Распознать текст</string>
    <string name="button_change_dictionaries_text">Изменить</string>
    <string name="text_selected_dictionaries_description">Словари, в которые будет добавлено слово:</string>
    <string name="text_best_dictionaries">Лучшие словари:</string>
    <string name="text_best_by_skill">По уровню владения:</string>
    <string name="text_best_by_size">По размеру:</string>
    <string name="text_trainings_result">Результаты тренировок:</string>
    <string name="text_answers_relation">Соотношение правильных/неправильных ответов</string>
    <string name="text_right_answers_legend">правильные ответы</string>
    <string name="text_wrong_answers_legen">ошибочные ответы</string>
    <string name="title_statistic">Статистика</string>
    <string name="total_answers">Всего ответов:  %1$d</string>
    <string name="right_answers">Правильных ответов: %1$d</string>
    <string name="statistics_ru">Статистика</string>
    <string name="chart_label_default">Изначально</string>
    <string name="text_empty_dictionaries_warning">У Вас еще нет словарей, либо они пусты, добавьте слова, чтобы посмотреть статистику</string>
    <string name="text_empty_dictionaries_list_placeholder">Пока что здесь пусто. \nЧтобы начать работу, добавьте новый словарь</string>
    <string name="text_definitions_list_empty_placeholder">Пока что здесь пусто. \nДобавьте новое слово!</string>
    <string name="text_negative_answer_button_description">Кнопка отрицательного ответа</string>
    <string name="text_positive_answer_button_description">Кнопка положительного ответа</string>
    <string name="text_to_dictionaries_button">К словарям</string>
</resources>
