<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:elevation="12dp"

    android:paddingVertical="16dp"
    android:paddingHorizontal="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/text_edit_recognized_text_field_description"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edited_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="start|top"
        android:hint="@string/hint_recognized_text"
        android:enabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true"
        app:hintAnimationEnabled="false"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:gravity="start|top"
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:textColor="?attr/titleColor" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/continue_recognition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/button_continue_recognize_text"/>
</LinearLayout>
