<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray_background_main"
    tools:context=".screens.trainers.TrainWriteFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/ic_flashcard_blank"
        android:id="@+id/flashcard"
        android:gravity="center"
        android:text="@string/default_word"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio = "5:3"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/input_word"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/flashcard"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/flashcard">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:hint="@string/enter_word" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:text="@string/next_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="28dp"
        android:visibility="invisible" />

    <TextView
        android:text="Перевод"
        android:layout_width="345dp"
        android:layout_height="40dp"
        android:id="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/flashcard"
        app:layout_constraintTop_toBottomOf="@+id/input_word"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:layout_marginStart="8dp"
        android:visibility="invisible" />

    <TextView
        android:text="@string/dict_completed"
        android:layout_width="338dp"
        android:layout_height="53dp"
        android:id="@+id/textCompleted"
        android:textColor="@color/dark_purple_main"
        android:textStyle="bold"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>
