<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryBackground"
    tools:context=".screens.dictionaries.addDictionaryScreen.AddDictionaryFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:paddingBottom="2dp"
            android:background="@drawable/background_with_underline"
            android:elevation="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/yandex_dict_api_hyperlink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textSize="20sp"
                android:textColorLink="?attr/titleColor"
                android:text="@string/yandex_dict_api_hyper"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enter_dictionary_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="6dp"
                android:hint="@string/hint_dictionary_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/added_dictionaries_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_dictionary_fab"
        android:layout_gravity="bottom|end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:contentDescription="@string/add_dictionary_fab_desc"
        app:tint="?attr/colorPrimaryBackground"
        app:srcCompat="@drawable/ic_accept" />
</FrameLayout>
