<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray_background_main"
    tools:context=".screens.trainers.TrainFlashcardsFragment">

    <LinearLayout
        android:id="@+id/flashcardButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        android:layout_marginHorizontal="24dp"
        android:padding="12dp"
        android:gravity="center"
        android:orientation="vertical"
        android:elevation="12dp"
        android:background="@drawable/shape_flashcard_background"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintDimensionRatio = "5:3">

    <TextView
            android:id="@+id/word_writing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_word"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/word_example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginTop="12dp" />
    </LinearLayout>

    <ImageButton
        android:layout_width="79dp"
        android:layout_height="79dp"
        android:background="@drawable/no_button"
        android:id="@+id/noButton"
        app:layout_constraintTop_toBottomOf="@+id/flashcardButton"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/flashcardButton"
        android:layout_marginStart="40dp"
        android:visibility="invisible"
        android:clickable="false" />

    <ImageButton
        android:layout_width="79dp"
        android:layout_height="79dp"
        android:background="@drawable/yes_button"
        android:id="@+id/yesButton"
        app:layout_constraintTop_toBottomOf="@+id/flashcardButton"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/flashcardButton"
        android:layout_marginEnd="40dp"
        android:visibility="invisible"
        android:clickable="false" />

    <TextView
        android:text="@string/dict_completed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_completed"
        android:textColor="@color/dark_purple_main"
        android:textStyle="bold"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/flashcardButton"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="@+id/flashcardButton"
        app:layout_constraintEnd_toEndOf="@+id/flashcardButton"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:text="@string/repeat_train"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/repeatDict"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="28dp"
        android:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>
